<?xml version="1.0" encoding="utf-8"?>
<!-- 03-06-2022, NIM:10119248, Syifa Nur Afifah, IF-6 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:paddingVertical="19dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            app:srcCompat="@drawable/bacl"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/judul"
            android:textColor="@color/gray_800"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/info"
                android:textColor="@color/gray_800"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_info"
                android:textColor="@color/gray_600"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_tes"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/hijau_tombol"
                    android:textSize="10sp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rgJenisTes">

                <RadioButton
                    android:id="@+id/rbJenisTesOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:buttonTint="@color/hijau_tombol"
                    android:checked="true"
                    android:text="@string/jenis_tes1" />

                <RadioButton
                    android:id="@+id/rbJenisTesOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_tes2"
                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_terkonfirmasi"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/hijau_tombol"
                    android:textSize="10sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etDateConfirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:background="@drawable/bg_box"
                android:drawableRight="@drawable/kalender"
                android:inputType="date"
                android:hint="@string/input_tgl"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nik"
                android:textColor="@color/gray_800"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etNIK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_box"
                android:inputType="number"
                android:padding="12dp"
                android:hint="@string/input_nik"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/hijau_tombol"
                    android:textSize="10sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_box"
                android:ems="10"
                android:inputType="text"
                android:padding="12dp"
                android:hint="@string/input_nama"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/hijau_tombol"
                    android:textSize="10sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_box"
                android:drawableRight="@drawable/kalender"
                android:ems="10"
                android:inputType="date"
                android:padding="12dp"
                android:textSize="14sp"
                android:text="@string/input_ttl"
                android:textColor="@color/gray_600" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/hijau_tombol"
                    android:textSize="10sp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Gender">

                <RadioButton
                    android:id="@+id/GenderOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:buttonTint="@color/hijau_tombol"
                    android:checked="true"
                    android:text="@string/laki" />

                <RadioButton
                    android:id="@+id/GenderOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan"

                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relation"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/hijau_tombol"
                    android:textSize="10sp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Relation">

                <RadioButton
                    android:layout_marginTop="8dp"
                    android:id="@+id/Relasi1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/hijau_tombol"
                    android:text="@string/relasi1"
                    />
                <RadioButton
                    android:id="@+id/Relasi2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relasi2"
                    /> <RadioButton
                android:id="@+id/Relasi3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relasi3"
                /> <RadioButton
                android:id="@+id/Relasi4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relasi4"
                />
            </RadioGroup>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:textSize="18sp"
                android:textColor="@color/gray_600"
                android:text="@string/setuju"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:background="@drawable/bg_hijau"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</ScrollView>
